<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="75dp"
        android:layout_marginStart="45dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:src="@drawable/image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textColor="@color/pink"
            android:textSize="36sp"
            android:textStyle="bold"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="41dp"
        android:background="@color/lightblue">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterLogAndPas"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:layout_marginTop="65dp"
            android:layout_marginStart="55dp"/>
        <EditText
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="55dp"
            android:layout_marginTop="13dp"/>
        <EditText
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="55dp"
            android:layout_marginTop="34dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/enter"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingStart="70dp"
            android:paddingEnd="65dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="183dp"
            android:layout_marginBottom="50dp"
            android:onClick="click"
            />
    </LinearLayout>


</LinearLayout>