<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculate"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginStart="12dp">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"
            android:onClick="back"
            android:backgroundTint="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:textStyle="normal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="43dp"
        android:layout_marginStart="68dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculateS"
            android:textColor="@color/pink"
            android:textSize="36sp"
            android:textStyle="bold"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="41dp"
        android:background="@color/lightblue">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingStart="29dp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterMetres"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic"
            android:background="@color/white"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="16dp"
            android:layout_marginTop="92dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/calculate"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingStart="70dp"
            android:paddingEnd="65dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="33dp"
            android:onClick="click"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rez"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic"
            android:background="@color/white"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="16dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="100dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>
    </LinearLayout>


</LinearLayout>